--- a/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
+++ b/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
@@ -13,7 +13,7 @@
 
     <div class="weather-data">
       <div class="location">{{weatherDatas.name}}</div>
-      <div class="temperature">{{weatherDatas.main.temp| number:"1.0-0"}}º</div>
+      <div class="temperature">{{weatherDatas.main.temp | number:"1.0-0"}}ºC</div>
     </div>
   </div>
 
@@ -21,6 +21,7 @@
   <div class="lower-data">
     <div class="more-info-label">Mais informações</div>
     <div class="more-info-container">
+
       <div class="info-block">
         <div class="info-block-label">
           <fa-icon size="lg" [icon]="minTemperatureIcon"></fa-icon>
@@ -28,9 +29,21 @@
         </div>
 
         <div class="info-block-value">
-          {{weatherDatas.main.temp_min}}
+          {{weatherDatas.main.temp_min | number:"1.0-0" }}ºC
         </div>
       </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="maxTemperatureIcon"></fa-icon>
+          <span>Maxima</span>
+        </div>
+
+        <div class="info-block-value">
+          {{weatherDatas.main.temp_max | number:"1.0-0" }}ºC
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
