Adicionando dados do vento, humidade e finalização do projeto

--- a/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
+++ b/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
@@ -13,7 +13,7 @@
 
     <div class="weather-data">
       <div class="location">{{weatherDatas.name}}</div>
-      <div class="temperature">{{weatherDatas.main.temp | number:"1.0-0"}}ºC</div>
+      <div class="temperature">{{weatherDatas.main.temp | number:"1.0-0"}} ºC</div>
     </div>
   </div>
 
@@ -29,7 +29,7 @@
         </div>
 
         <div class="info-block-value">
-          {{weatherDatas.main.temp_min | number:"1.0-0" }}ºC
+          {{weatherDatas.main.temp_min | number:"1.0-0" }} ºC
         </div>
       </div>
 
@@ -40,7 +40,29 @@
         </div>
 
         <div class="info-block-value">
-          {{weatherDatas.main.temp_max | number:"1.0-0" }}ºC
+          {{weatherDatas.main.temp_max | number:"1.0-0" }} ºC
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="humidityIcon"></fa-icon>
+          <span>Humidade</span>
+        </div>
+
+        <div class="info-block-value">
+          {{weatherDatas.main.humidity}} %
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="windIcon"></fa-icon>
+          <span>Vento</span>
+        </div>
+
+        <div class="info-block-value">
+          {{weatherDatas.wind.speed }} km/h
         </div>
       </div>
 
