--- a/stock-control/src/app/modules/home/home.component.html
+++ b/stock-control/src/app/modules/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="flex justify-content-center align-content-center text-align-center">
 
       <!-- Login -->
-      <form>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmitLoginForm()">
         <p-card
           styleClass="mt-10"
           header="Login"
@@ -14,17 +14,17 @@
           <div
             class="flex justify-content-center align-content-center text-align-center"
           >
-            <input type="email" pInputText placeholder="Email">
+            <input formControlName="email" type="email" pInputText placeholder="Email">
           </div>
 
           <div
             class="flex justify-content-center align-content-center text-align-center mt-3"
           >
-            <input type="password" pInputText placeholder="Senha">
+            <input formControlName="password" type="password" pInputText placeholder="Senha">
           </div>
 
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRipple label="Login"></button>
+            <button type="submit" pButton pRipple label="Login" [disabled]="!this.loginForm.valid"></button>
           </div>
 
           <span
