--- a/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
+++ b/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
@@ -1,1 +1,30 @@
-<p>weather-card works!</p>
+<div class="container" *ngIf="this.weatherDatas">
+  <div class="upper-data">
+    <img src="../../../../../assets/sun.jpg" alt="" *ngIf="this.weatherDatas.main.temp > 15">
+
+    <img src="../../../../../assets/cold1.jpg" alt="" *ngIf="this.weatherDatas.main.temp <= 15">
+
+    <div class="weather-data">
+      <div class="location">{{this.weatherDatas.name}}</div>
+      <div class="temperature">
+          {{this.weatherDatas.main.temp | number: "1.0-0" }}º
+      </div>
+    </div>
+  </div>
+
+  <div class="lower-data">
+    <div class="more-info-label">Main informações</div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="this.minTemperatureIcon" />
+          <span>Minima</span>
+        </div>
+
+        <div class="info-block-value">
+          {{this.weatherDatas.main.temp_min}}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
