feat: formulario de login e criar conta na aplicação

--- a/stock-control/src/app/modules/home/home.component.scss
+++ b/stock-control/src/app/modules/home/home.component.scss
@@ -13,3 +13,19 @@
     background-position: top;
   }
 }
+
+.col-12{
+ & > .flex {
+    align-items: center;
+    height: 100vh;
+  }
+
+  span{
+    cursor: pointer;
+    transition: color 0.3s;
+
+    &:hover{
+      color: #3B82F6 !important;
+    }
+  }
+}
