--- a/stock-control/src/app/modules/home/home.component.html
+++ b/stock-control/src/app/modules/home/home.component.html
@@ -7,8 +7,72 @@
         text-align-center"
     >
 
-      <form action="">
-        <p-card></p-card>
+      <form action="" *ngIf="this.loginCard">
+        <p-card
+          styleClass="mt-10"
+          header="Login"
+          subheader="Faça login com sua conta existente!"
+        >
+          <div
+            class="flex justify-content-center align-content-center text-align-center"
+          >
+            <input type="email" pInputText placeholder="Email" />
+          </div>
+
+          <div
+            class="flex justify-content-center align-content-center text-align-center mt-3"
+          >
+            <input type="password" pInputText placeholder="Senha" />
+          </div>
+
+          <div class="card flex justify-content-center mt-3">
+            <button type="submit" pButton pRipple label="Login"></button>
+          </div>
+
+          <span (click)="this.handler.toggleForm(false)" class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold">
+            Criar Conta
+          </span>
+
+        </p-card>
+      </form>
+
+
+      <form action="" *ngIf="!this.loginCard">
+        <p-card
+          styleClass="mt-10"
+          header="Criar conta"
+          subheader="Crie ja sua conta!"
+        >
+          <div
+            class="flex justify-content-center align-content-center text-align-center"
+          >
+            <input type="text" pInputText placeholder="Nome" />
+          </div>
+
+          <div
+            class="flex justify-content-center align-content-center text-align-center mt-3"
+          >
+            <input type="email" pInputText placeholder="Email" />
+          </div>
+
+          <div
+            class="flex justify-content-center align-content-center text-align-center mt-3"
+          >
+            <input type="password" pInputText placeholder="Senha" />
+          </div>
+
+          <div class="card flex justify-content-center mt-3">
+            <button type="submit" pButton pRipple label="Criar conta"></button>
+          </div>
+
+          <span
+            class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+            (click)="this.handler.toggleForm(true)"
+          >
+            Fazer login
+          </span>
+
+        </p-card>
       </form>
 
     </div>
