--- a/stock-control/src/app/app.component.html
+++ b/stock-control/src/app/app.component.html
@@ -1,1 +1,15 @@
+<p-toast
+  position="top-right"
+  [showTransformOptions]="'translateY(100%)'"
+  [showTransitionOptions]="'500ms'"
+  [hideTransitionOptions]="'500ms'"
+  [showTransformOptions]="'translateX(100%)'"
+  [breakpoints]="{
+    '920px':{
+      width:'100%',
+      right:'0',
+      left:'0'
+    }
+  }"
+/>
 <router-outlet></router-outlet>
