--- a/stock-control/src/app/modules/home/home.component.scss
+++ b/stock-control/src/app/modules/home/home.component.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@media screen and (max-width:1000px) {
+  .grid{
+    height: 100vmax;
+  }
+}
+
 .col-12{
  & > .flex {
     // align-items: center;
