--- a/stock-control/src/app/shared/components/toobar-navigation/toobar-navigation.component.html
+++ b/stock-control/src/app/shared/components/toobar-navigation/toobar-navigation.component.html
@@ -38,4 +38,14 @@
       class="mr-2"
     />
   </div>
+
+  <div  class="p-toobar-group-end">
+    <p-button
+      icon="pi pi-sign-out"
+      label="Sair"
+      styleClass="p-button-danger"
+      class="mr-2"
+      (onClick)="this.signOut()"
+    />
+  </div>
 </p-toolbar>
