feat: rota de produtos e componente inciial

--- a/stock-control/src/app/shared/components/toobar-navigation/toobar-navigation.component.html
+++ b/stock-control/src/app/shared/components/toobar-navigation/toobar-navigation.component.html
@@ -13,7 +13,7 @@
   <div class="p-toobar-group-center">
     <p-button
       icon="pi pi-card-plus"
-      label="Pordutos"
+      label="Produtos"
       routerLink="/products"
       styleClass="bg-indigo-800 p-button-secondary"
       routerLinkActive="exact_route"
@@ -32,7 +32,7 @@
     <p-button
       icon="pi pi-credit-card"
       label="Efetuar Venda"
-      routerLink="/products"
+      routerLink="/credit"
       styleClass="bg-indigo-800 p-button-secondary"
       routerLinkActive="exact_route"
       class="mr-2"
