--- a/stock-control/src/app/modules/products/components/products-table/products-table.component.html
+++ b/stock-control/src/app/modules/products/components/products-table/products-table.component.html
@@ -180,6 +180,7 @@
                   class="p-button-rounded p-button-danger"
                   pTooltip="Remover produto"
                   tooltipPosition="top"
+                  (click)="this.handleDeleteProduct(product.id, product.name)"
                  ></button>
               </div>
             </td>
