feat: remover produtos

--- a/stock-control/src/app/modules/products/pages/products-home/products-home.component.html
+++ b/stock-control/src/app/modules/products/pages/products-home/products-home.component.html
@@ -5,3 +5,5 @@
   (productEvent)="this.handleProductionAction($event)"
   (deleteProductEvent)="this.handleDeleteProductAcion($event)"
 />
+
+<p-confirmDialog [style]="{width: '50vw'}" />
